# serek

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml  codeql-analysis.yml  linux.yml
benchmarks/: CMakeLists.txt  benchmark_server.cpp
benchmarks/controllers/: base_benchmark_controller.hpp  benchmark_controllers.cpp  drogon_benchmark_controller.hpp  fc_benchmark_controller.hpp  serek_benchmark_controller.hpp
benchmarks/jmeter/: benchmark_plan.jmx  generate_benchmark_data.py
cmake/: add_compiler_flags.cmake  add_flags.cmake  add_include_directories.cmake  attach_package.cmake  create_library.cmake  get_all_directories.cmake  get_all_files.cmake
docs/: Doxyfile.in
include/serek/: serek.hpp
include/serek/json/: common.hpp  deserial.hpp  serial.hpp  tokenization.hpp  visitors.hpp
include/serek/private/: acceptors.hpp  exceptions.hpp  field.hpp  fundamental_type_holder.hpp  member_name_extractor.hpp  pack.hpp  requirements.hpp  type_holders.hpp  types.hpp  visitors.hpp
include/serek/serial/: json.hpp  visitors.hpp
paperwork/: .gitignore  bibliography.bib
paperwork/paper/: master_degree.tex
paperwork/paper/charts/: generate_charts.py
paperwork/paper/charts/data/json_vs_other_formats/: data.csv  info.json
paperwork/paper/charts/data/throughput_per_library/: data.csv  info.json
paperwork/paper/charts/pre_generated_charts/: commit_percentage.xlsx  throughput_summary_per_library_summary.csv  total_request_time_per_library_summary.csv  total_serial_and_deserial_library_summmary.csv
paperwork/pre_presentation/: seminary.tex
paperwork/presentation_final/: presentation.tex
src/: serek.cpp
src/json/: deserial.cpp  deserialization.cpp  tokenization.cpp
tests/: CMakeLists.txt  field.test.cpp  json.test.cpp  json_deserial.test.cpp  json_serial.test.cpp  pack.test.cpp  require.test.cpp
tests/shared/: tools.cpp
tests/shared/include/shared/: packed_struct_set.hpp  struct_set.hpp  tools.hpp
