set(TEST_DIRECTORY_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(SHARED_TOOLS_ROOT_PATH ${TEST_DIRECTORY_PATH}/shared)
add_subdirectory(ut)

add_library(shared_tools ${SHARED_TOOLS_ROOT_PATH}/tools.cpp )
target_link_libraries(shared_tools PUBLIC serek ut)
target_include_directories(shared_tools PUBLIC ${SHARED_TOOLS_ROOT_PATH}/include PRIVATE ${${PROJECT_NAME}_INCLUDE_DIRS})

file(GLOB TEST_SOURCE_FILES LIST_DIRECTORIES FALSE ${TEST_DIRECTORY_PATH} *.test.cpp)
foreach(i_filename ${TEST_SOURCE_FILES})
	get_filename_component( filename ${i_filename} NAME )
	string(REPLACE ".test.cpp" "" test_name ${filename})
	set(LIST_OF_TESTS "${test_name} ${LIST_OF_TESTS}")
	add_library(${test_name} ${i_filename})
	target_link_libraries(${test_name} PUBLIC shared_tools)
	add_executable(run_${test_name} ${filename})
	target_link_libraries(run_${test_name} ${test_name})
	add_test(NAME ${test_name} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/run_${test_name} WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
endforeach()
